--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,6 @@ script:
   - METALINTER_CONCURRENCY=2 make check
   - make bench-race
   - make coveralls
+
+after_sucess:
   - make release-conditional
