docker login before release

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,5 @@ script:
   - make coveralls
 
 after_sucess:
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - make release-conditional
