--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,10 @@ script:
   - make coveralls
 
 after_success:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+  - if [ "$TRAVIS_OS_NAME" == "linux" -a ! -z "$TRAVIS_TAG" ]; then
+    echo "Executing release on tag build $TRAVIS_TAG""
     docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-    ARCH=linux make release-conditional
+    ARCH=linux make release
+    else
+    echo "Not executing release on non-tag build"
     fi
